@@ -974,6 +974,111 @@ AT_CHECK([$COMPILE_MODULE -c callee.cob], [0], [], [])
 AT_CHECK([$COMPILE -c caller.cob], [0], [], [])
 AT_CHECK([$COMPILE -o prog caller.$COB_OBJECT_EXT callee.$COB_OBJECT_EXT], [0], [], [])
 AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [], [])
+AT_CHECK([$COMPILE -o prog2 caller.cob callee.cob], [0], [], [])
+AT_CHECK([$COBCRUN_DIRECT ./prog2], [0], [], [])
+
+AT_CLEANUP
+
+
+AT_SETUP([Static call with static linking])
+AT_KEYWORDS([runmisc])
+
+AT_DATA([callee.cob], [
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      callee.
+       PROCEDURE        DIVISION.
+           EXIT PROGRAM.
+])
+
+AT_DATA([caller.cob], [
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      caller.
+       PROCEDURE        DIVISION.
+           CALL STATIC "callee"
+           END-CALL.
+           STOP RUN.
+])
+
+AT_CHECK([$COMPILE_MODULE -c callee.cob], [0], [], [])
+AT_CHECK([$COMPILE -c caller.cob], [0], [], [])
+AT_CHECK([$COMPILE -o prog caller.$COB_OBJECT_EXT callee.$COB_OBJECT_EXT], [0], [], [])
+AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [], [])
+AT_CHECK([$COMPILE -o prog2 -static caller.cob callee.cob], [0], [], [])
+AT_CHECK([$COBCRUN_DIRECT ./prog2], [0], [], [])
+AT_CHECK([$COMPILE -o prog3 caller.cob callee.cob], [0], [], [])
+AT_CHECK([$COBCRUN_DIRECT ./prog3], [0], [], [])
+
+AT_CLEANUP
+
+
+AT_SETUP([Dynamic CALL with ON EXCEPTION])
+
+AT_KEYWORDS([runmisc])
+
+AT_DATA([caller.cob], [
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      caller.
+       PROCEDURE        DIVISION.
+           CALL "callee1" ON EXCEPTION
+              CALL "callee2" ON EXCEPTION
+                  DISPLAY "neither calee1 nor callee2 found"
+              END-CALL
+           END-CALL
+           GOBACK.
+])
+
+AT_DATA([callee2.cob], [
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      callee2.
+       PROCEDURE        DIVISION.
+           DISPLAY "this is callee2" NO ADVANCING
+           GOBACK.
+])
+
+AT_CHECK([$COMPILE caller.cob], [0], [], [])
+AT_CHECK([$COMPILE_MODULE callee2.cob], [0], [], [])
+AT_CHECK([$COBCRUN_DIRECT ./caller], [0],
+[this is callee2], [])
+
+AT_CLEANUP
+
+
+AT_SETUP([Static CALL with ON EXCEPTION])
+
+AT_KEYWORDS([runmisc])
+
+AT_DATA([caller.cob], [
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      caller.
+       PROCEDURE        DIVISION.
+           CALL "callee1" ON EXCEPTION
+              CALL "callee2" ON EXCEPTION
+                  DISPLAY "neither calee1 nor callee2 found"
+              END-CALL
+           END-CALL
+           GOBACK.
+])
+
+AT_DATA([callee2.cob], [
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      callee2.
+       PROCEDURE        DIVISION.
+           DISPLAY "this is callee2" NO ADVANCING
+           GOBACK.
+])
+
+
+AT_CHECK([$COMPILE_MODULE -c callee2.cob], [0], [], [])
+AT_CHECK([$COMPILE -c caller.cob], [0], [], [])
+AT_CHECK([$COMPILE -o prog caller.$COB_OBJECT_EXT callee2.$COB_OBJECT_EXT], [0], [], [])
+AT_CHECK([$COBCRUN_DIRECT ./prog], [0],
+[this is callee2], [])
+AT_CHECK([$COMPILE -o prog2 -static caller.cob callee2.cob], [0], [], [])
+AT_CHECK([$COBCRUN_DIRECT ./prog2], [0],
+[this is callee2], [])
+AT_CHECK([$COMPILE -o prog3 caller.cob callee2.cob], [0], [], [])
+AT_CHECK([$COBCRUN_DIRECT ./prog3], [0],
+[this is callee2], [])
 
 AT_CLEANUP
 
